# ate-rag-kb-marketplace

./: .gitignore  .mcp.example.json  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  README_CN.md  THIRD_PARTY.md  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.opencode/: INSTALL.md
configs/: config.yaml
docs/: PLUGIN_INSTALL.md  PLUGIN_INSTALL_CN.md  agent_e2e_validation.md  agent_e2e_validation_CN.md  agent_integration.md  beta_checklist.md  beta_checklist_CN.md
scripts/: backfill_labels.py  benchmark_reranker_mode.py  convert_igxl_help.py  evaluate_50_questions.py  generate_core_modules.py  ingest.py  install_mcp.py  package_models.py  package_qdrant_snapshot.py  rebuild_sparse_vectors.py  reorganize_raw_docs.py  run_eval.py  serve.py  start_mcp.py  validate_agent_routing_policy.py  validate_igxl_source_hints.py  validate_multi_platform_retrieval.py  validate_plugin_install.py  validate_reorganization.py  verify_models.py
tests/: __init__.py  test_api_server.py  test_chunking_models.py  test_chunking_strategies.py  test_ci_config.py  test_cli_ingest.py  test_cli_main.py  test_convert_igxl_help.py  test_document_scope.py  test_embedding_encoder.py  test_ingestion_incremental.py  test_ingestion_pipeline.py  test_ingestion_pipeline_docs.py  test_model_packaging.py  test_plugin_install.py  test_prompts.py  test_retrieval_compression.py  test_retrieval_hybrid.py  test_retrieval_parent_child.py  test_retrieval_pipeline.py  test_retrieval_reranker.py  (+8 more)
(+114 files in other folders)
