[project]
name = "ate-rag-kb"
version = "0.1.0"
description = "ATE Test Engineer Agentic RAG Knowledge Base"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "qdrant-client>=1.8.0",
    "sentence-transformers>=2.6.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "markdown>=3.6.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]
ocr = [
    "pillow>=10.0.0",
    "easyocr>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ate_rag_kb"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
